# pcd-anomaly-detection

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements-lock.txt
.github/: PULL_REQUEST_TEMPLATE.md
configs/: base.yaml
data/: README.md
experiments/: README.md
scripts/: analyze_pasdf_failures.py  analyze_sample_geometry.py  build_p6_delivery_evidence_pack.py  evaluate.py  export_pasdf_scores.py  plan_pasdf_voxel_sweep.py  prepare_data.py  run_geometry_smoke.py  run_p6_failure_mode_closure.py  run_p6_pasdf_calibration.py  run_p6_targeted_diagnostics.py  run_p7_multitemplate.py  summarize_pasdf_stability.py  summarize_pasdf_sweep.py  train.py  train_p7_calibration.py  visualize.py  visualize_pasdf_scores.py
tests/: test_analyze_pasdf_failures.py  test_analyze_sample_geometry.py  test_build_p6_delivery_evidence_pack_cli.py  test_dataset.py  test_delivery_evidence.py  test_evaluate.py  test_export_pasdf_scores.py  test_failure_modes.py  test_geometric_scoring.py  test_geometry_neighbors.py  test_geometry_normals_curvature.py  test_geometry_residuals.py  test_package.py  test_pasdf_adapter.py  test_pasdf_calibration.py  test_pasdf_case_study.py  test_pasdf_failure_analysis.py  test_pasdf_registration_analysis.py  test_pasdf_score_export.py  test_pasdf_stability_analysis.py  test_pasdf_sweep_analysis.py  test_plan_pasdf_voxel_sweep.py  test_positive_aware_calibration.py  test_prepare_data.py  test_preprocess.py  test_registration_confidence.py  test_run_geometry_smoke.py  (+16 more)
(+117 files in other folders)
